# py-imgui-redux

./: .clang-format  .gitignore  .gitmodules  .style.yapf  CMakeLists.txt  CMakePresets.json  LICENSE  MANIFEST.in  README.md  build-wheels-win.sh  build-wheels.sh  build_deps.txt  generate_stubs.py  generate_stubs.sh  make-docs.sh  pybind11_stubgen.py  pyproject.toml  requirements.txt  setup-test.py  setup.py  setup.sh
.github/workflows/: dist.yaml
autogen/: config.py  gen.py  parse_enums.py  parse_funcs.py
autogen-configs/: imgui.txt  imnodes.txt  implot.txt
bind-imgui/: CMakeLists.txt  bind-imgui.cpp  bind-modules.cpp  bind-modules.h  imgui-core.cmake  imnodes.cmake  implot.cmake  module-utility.h  structs.h  utilityDefines.h
bind-imgui/binder/inc/: bind-modules.h  def-utility.h  enum-utility.h  wraps.h
bind-imgui/binder/src/: bind-modules.cpp  enum-utility.cpp  wraps.cpp
bind-imgui/imgui-core/inc/: imgui-modules.h
bind-imgui/imgui-core/src/: bind-imgui-core.cpp  bind-imgui.cpp
bind-imgui/imgui-core/src/bind-backends/: glfw.cpp  opengl3.cpp
bind-imgui/imgui-core/src/modules/: context.cpp  cursor-layout.cpp  demos.cpp  drawlist.cpp  enums.cpp  im-windows.cpp  imgui-context.cpp  imgui-enums.cpp  imgui-structs.cpp  stacks.cpp  structs.cpp  styles.cpp
bind-imgui/imgui-core/src/modules/widgets/: colors.cpp  drag-inputs.cpp  images.cpp  input.cpp  main.cpp  slide-inputs.cpp  tables.cpp  tabs.cpp  text.cpp  tree.cpp
bind-imgui/imnodes/inc/: imnodes-modules.h
bind-imgui/imnodes/src/: bind-imnodes.cpp
bind-imgui/imnodes/src/modules/: imnodes-context.cpp  imnodes-enums.cpp  imnodes-structs.cpp
bind-imgui/implot/inc/: implot-modules.h
bind-imgui/implot/src/: bind-implot.cpp
bind-imgui/implot/src/modules/: implot-colormap.cpp  implot-context.cpp  implot-enums.cpp  implot-misc.cpp  implot-plotting.cpp  implot-setup-funcs.cpp  implot-structs.cpp  implot-tools.cpp  implot-utils.cpp
bind-imgui/inc/: modules.h  utilityDefines.h
bind-imgui/modules/: context.hpp  cursor-layout.hpp  demos.hpp  im-windows.hpp  stacks.hpp  styles.hpp  widgets-text.hpp
bind-imgui/src/: bind-imgui.cpp
bind-imgui/src/modules/: context.cpp  cursor-layout.cpp  demos.cpp  im-windows.cpp  stacks.cpp  structs.cpp  styles.cpp
bind-imgui/src/modules/widgets/: drag-inputs.cpp  input.cpp  main.cpp  slide-inputs.cpp  text.cpp
cmake/: Findpyglad.cmake  Findpyglfw.cmake  autogen.cmake  glfw-srcs.cmake  imgui-srcs.cmake  setupPyBindLib.cmake
docker/: Dockerfile  audit-imgui.sh  build-version.sh  build.sh  getBuildDeps.py  start.sh
docs/source/: conf.py  imgui.rst  index.rst
examples/: fonts.py  images.py  imnodes_example.py  implot_example.py  stock-widgets.py  stock_widgets.py  window_boilerplate.py
imgui_utils/: __main__.py  boilerplate.py
py-imgui-redux/inc/bind-imgui/: callback-structs.h  glfw-modules.h  glfw-stubs.h  imgui-callback-structs.h  imgui-modules.h  imnodes-modules.h  implot-formatter-callback.h  implot-modules.h  implot-spec.h
py-imgui-redux/inc/binder/: bind-modules.h  enum-utility.h  list-wrapper.h  wraps.h
py-imgui-redux/src/: bind-imgui.cpp
py-imgui-redux/src/binder/: wraps.cpp
py-imgui-redux/src/glfw/: bind-glfw.cpp  callbacks.cpp  context.cpp  input.cpp  joystick.cpp  monitors.cpp  structs.cpp  windows.cpp
py-imgui-redux/src/imgui-core/: bind-imgui-core.cpp
py-imgui-redux/src/imgui-core/bind-backends/: glfw.cpp
py-imgui-redux/src/imgui-core/modules/: demos.cpp  drawlist.cpp  im-windows.cpp  imgui-context.cpp  imgui-enums.cpp  imgui-structs.cpp  imgui-vectors.cpp  stacks.cpp
py-imgui-redux/src/imgui-core/modules/widgets/: colors.cpp  drag-inputs.cpp  images.cpp  input.cpp  main.cpp  multi-select.cpp  slide-inputs.cpp  tables.cpp  text.cpp  tree.cpp
py-imgui-redux/src/imgui-knobs/: bind-imgui-knobs.cpp
py-imgui-redux/src/imnodes/: bind-imnodes.cpp
py-imgui-redux/src/imnodes/modules/: imnodes-context.cpp  imnodes-structs.cpp
py-imgui-redux/src/implot/modules/: implot-colormap.cpp  implot-context.cpp  implot-enums.cpp  implot-misc.cpp  implot-plotting.cpp  implot-setup-funcs.cpp  implot-structs.cpp  implot-tools.cpp  implot-utils.cpp
scripts/: build-version-win.sh  build-version.sh  build-wheels-win.sh  build-wheels.bat  build-wheels.sh
source/inc/bind-glfw/: modules.h
source/inc/bind-imgui/: glfw-modules.h  imgui-modules.h  imnodes-modules.h  implot-modules.h
source/inc/bind-imgui/binder/: bind-modules.h  numpy.h  struct-utility.h
source/inc/bind-imgui/imgui-core/: imgui-modules.h  texture.h
source/inc/bind-imgui/imnodes/: imnodes-modules.h
source/inc/bind-imgui/implot/: implot-modules.h
source/inc/binder/: bind-modules.h  list-wrapper.h  wraps.h
source/src/: bind-imgui.cpp
source/src/bind-glfw/: CMakeLists.txt  bind-glfw.cpp  constants.cpp  context.cpp  input.cpp  internal.cpp  joystick.cpp  monitors.cpp  structs.cpp  windows.cpp
source/src/bind-imgui/binder/: bind-modules.cpp  enum-utility.cpp  wraps.cpp
source/src/bind-imgui/imgui-core/: bind-imgui-core.cpp
source/src/bind-imgui/imnodes/: bind-imnodes.cpp
source/src/bind-imgui/implot/: bind-implot.cpp
source/src/binder/: wraps.cpp
source/src/glfw/: callbacks.cpp  constants.cpp  monitors.cpp  windows.cpp
source/src/imgui-core/: bind-imgui-core.cpp
source/src/imgui-core/bind-backends/: glfw.cpp  opengl3.cpp
source/src/imgui-core/modules/: cursor-layout.cpp  demos.cpp  drawlist.cpp  im-windows.cpp  imgui-context.cpp  imgui-enums.cpp  imgui-structs.cpp  stacks.cpp  styles.cpp
source/src/imnodes/: bind-imnodes.cpp
source/src/imnodes/modules/: imnodes-context.cpp  imnodes-enums.cpp  imnodes-structs.cpp
source/src/implot/: bind-implot.cpp
source/src/implot/modules/: implot-colormap.cpp  implot-context.cpp  implot-enums.cpp  implot-plotting.cpp  implot-setup-funcs.cpp  implot-structs.cpp  implot-tools.cpp  implot-utils.cpp
test/: CMakeLists.txt  every-widget.py  gen_interface.py  gui-test.py  test.py
test/inc/: bind-test1.h  bind-test2.h  test.h
test/src/: bind-main.cpp  bind-test1.cpp  bind-test2.cpp  test.cpp
(+36 files in other folders)
