[build-system]
requires = ["setuptools>=80.9.0", "wheel", "cmake>=3.25"]
build-backend = "setuptools.build_meta"

[tool.distutils.egg_info]
egg_base = "build"

[project]
name = "py-imgui-redux"
version = "4.0.1"
authors = [{ name = "Alagyn" }]
description = "A python wrapper for DearImGUI and popular extensions"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: User Interfaces",
]

[project.urls]
"Homepage" = "https://github.com/alagyn/py-imgui-redux"
"Bug Tracker" = "https://github.com/alagyn/py-imgui-redux/issues"
